--- a/package.json
+++ b/package.json
@@ -16,19 +16,20 @@
   "dependencies": {
     "@astrojs/check": "0.9.4",
     "@astrojs/db": "^0.14.8",
-    "@astrojs/mdx": "^4.2.0",
-    "@astrojs/preact": "^4.0.5",
-    "@astrojs/sitemap": "3.2.1",
-    "@astrojs/vercel": "^8.1.2",
-    "@tailwindcss/vite": "^4.0.14",
-    "astro": "5.5.2",
+    "@astrojs/mdx": "^4.2.1",
+    "@astrojs/preact": "^4.0.6",
+    "@astrojs/rss": "^4.0.11",
+    "@astrojs/sitemap": "3.3.0",
+    "@astrojs/vercel": "^8.1.3",
+    "@tailwindcss/vite": "^4.0.15",
+    "astro": "5.5.4",
     "clsx": "^2.1.1",
     "preact": "^10.26.4",
     "resend": "^4.1.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@astrojs/markdown-remark": "^6.3.0",
+    "@astrojs/markdown-remark": "^6.3.1",
     "@fontsource-variable/onest": "^5.2.6",
     "@tailwindcss/typography": "^0.5.16",
     "astro-icon": "^1.1.5",
@@ -40,9 +41,9 @@
     "rehype-toc": "^3.0.2",
     "remark-toc": "^9.0.0",
     "sharp": "^0.33.5",
-    "tailwindcss": "^4.0.14",
+    "tailwindcss": "^4.0.15",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.2"
   },
-  "packageManager": "pnpm@10.6.3"
+  "packageManager": "pnpm@10.6.5"
 }
